# vigilant-waddle

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Jenkinsfile  LICENSE  README.md  build.yaml  vw.py
.github/workflows/: publish.yml
raw/: Cargo.toml
raw/src/: main.rs
rs/: Cargo.toml
rs/src/: config.rs  dataframe.rs  hivepart.rs  main.rs  paths.rs  stooq_download.rs  transactions.rs
rs/src/bronze/: mod.rs  stooq.rs
rs/src/raw/: stooq.rs
src/: dataframe.rs  main.rs  stooq_download.rs  transactions.rs  ws.rs
