[package]
name = "vigilant-waddle"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "waddle"
path = "src/main.rs"

[[bin]]
name = "waddle-ws"
path = "src/ws.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
env_logger = "0.11.8"
indoc = "2.0.7"
log = "0.4.29"
polars = { version = "0.52.0", features = ["csv"] }
reqwest = "0.13.1"
rust_decimal = "1.40.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
