[package]
name = "vigilant-waddle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
polars = { version = "0.52.0", features = ["csv", "describe", "lazy"], default-features = false }
reqwest = "0.13.1"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
walkdir = "2.5.0"
