[package]
name = "vigilant-waddle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
polars = { version = "0.52.0", features = ["csv"] }
reqwest = "0.13.1"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
